@@ -1,3 +1,10 @@
+2007-02-26  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baoab-treeview.c:
+	* src/callbacks.c:
+
+	Resort when toggling "allocated space".
+
 2007-02-26  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab.c: (start_proc_on_dir):
